# database_coursework

./: .gitignore  CMakeLists.txt  adialog.cpp  adialog.h  atablemodel.cpp  atablemodel.h  database_manager.cpp  database_manager.h  dialog_auditorium.cpp  dialog_auditorium.h  dialog_auditorium.ui  dialog_change_user.cpp  dialog_change_user.h  dialog_change_user.ui  dialog_discipline.cpp  dialog_discipline.h  dialog_discipline.ui  dialog_group.cpp  dialog_group.h  dialog_group.ui  dialog_lecture.cpp  dialog_lecture.h  dialog_lecture.ui  dialog_relationship_stream_group.cpp  dialog_relationship_stream_group.h  dialog_relationship_stream_group.ui  dialog_relationship_teacher_discipline.cpp  dialog_relationship_teacher_discipline.h  dialog_relationship_teacher_discipline.ui  dialog_stream.cpp  dialog_stream.h  dialog_stream.ui  dialog_student.cpp  dialog_student.h  dialog_student.ui  dialog_teacher.cpp  dialog_teacher.h  dialog_teacher.ui  form_connection_string.cpp  form_connection_string.h  (+36 more)
